<?xml version="1.0" encoding="utf-8"?>
    <layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/transparent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_sheet_drawable"
                android:orientation="vertical"
                android:paddingTop="12dp">

                <LinearLayout
                    android:id="@+id/move_as_client_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp_16"
                        android:src="@drawable/ic_move_attachment" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/avenirnext_medium"
                        android:text="@string/create_client_profile"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/sp_16" />

                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_gray" />

                <LinearLayout
                    android:id="@+id/delete_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp_16"
                        android:src="@drawable/ic_delete_collection_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/avenirnext_medium"
                        android:text="@string/delete"
                        android:textColor="@color/colorRed"
                        android:textSize="@dimen/sp_16" />
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_gray" />

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/font_45sp"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_24"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:layout_marginBottom="@dimen/dp_16"
                    android:background="@drawable/rounded_chat_bottom_background"
                    android:fontFamily="@font/avenirnext_regular"
                    android:text="@string/cancel"
                    android:textAllCaps="true"
                    android:textColor="@color/text_color_primary"
                    android:textSize="@dimen/font_medium_small" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </layout>
