<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/font_large"
        android:layout_marginEnd="@dimen/font_large"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="4dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@color/white"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/avenirnext_demibold"
                android:gravity="center"
                android:textColor="@color/primary_title"
                android:textSize="@dimen/font_x_large">

            </TextView>

            <TextView
                android:id="@+id/des"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/font_medium"
                android:background="@color/white"
                android:fontFamily="@font/avenirnext_medium"
                android:gravity="center"
                android:text="@string/are_you_sure_delete"
                android:textColor="@color/gray_text_color"
                android:textSize="@dimen/sp_14">

            </TextView>

            <LinearLayout
                android:id="@+id/btn_layout"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="23dp"
                android:layout_below="@+id/des"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:background="@color/white"

                android:weightSum="4">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2" />

                <TextView
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/font_45sp"
                    android:layout_margin="0dp"
                    android:layout_weight="1.7"

                    android:background="@drawable/white_cancel_background"
                    android:elevation="0dp"
                    android:fontFamily="@font/avenirnext_demibold"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:text="@string/cancel"
                    android:textAllCaps="true"
                    android:textColor="@color/primary_title"
                    android:textSize="@dimen/font_medium_small" />

                <TextView
                    android:id="@+id/btn_delete"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/font_45sp"
                    android:layout_marginStart="@dimen/font_x_large"
                    android:layout_weight="1.7"
                    android:background="@drawable/red_delete_background"
                    android:elevation="0dp"
                    android:fontFamily="@font/avenirnext_demibold"
                    android:gravity="center"
                    android:text="@string/delete"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_medium_small" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2" />


            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>